--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TELEGRAM_TOKEN=your_bot_token_here
+TELEGRAM_TOKEN=1027881411:AAHsqhzx4UGJEY6qOSJydLopHQw66Sxw0xg
 MONGO_URI=mongodb://localhost:27017/mafia-game
